locktree/tests/compilefail/declare_async_rw_lock_without_explicit_hkt.rs
use locktree::locktree;

locktree! {
    Main {
        rw_lock: async RwLock<()>
    }
}

fn main() {}
