locktree/tests/compilefail/declare_async_rw_lock_without_explicit_hkt.stderr
error: proc macro panicked
 --> $DIR/declare_async_rw_lock_without_explicit_hkt.rs:3:1
  |
3 | / locktree! {
4 | |     Main {
5 | |         rw_lock: async RwLock<()>
6 | |     }
7 | | }
  | |_^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("async locks must have an explicit HKT")
